force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>[a03][Address__c] Endereço utilizado em contas.</description>
    <label>Endereço</label>
    <nameField>
        <label>Rua</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endereços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>