force-app/main/default/objects/Address__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome da conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Endereços</relationshipLabel>
    <relationshipName>Endere_os</relationshipName>
    <type>Lookup</type>
</CustomField>