force-app/main/default/objects/Address__c/fields/CalendarWarningTxt__c.field-meta.xml
<CustomField>
    <fullName>CalendarWarningTxt__c</fullName>
    <label>Agenda / aviso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>