force-app/main/default/objects/Address__c/fields/CEPTxt__c.field-meta.xml
<CustomField>
    <fullName>CEPTxt__c</fullName>
    <label>CEP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>