force-app/main/default/objects/Address__c/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Código do cliente.</inlineHelpText>
    <label>Id customizado</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>