force-app/main/default/objects/Address__c/fields/LeadLkp__c.field-meta.xml
<CustomField>
    <fullName>LeadLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Novo Cliente</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Endereços</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>