force-app/main/default/objects/Address__c/fields/NeighborhoodTxt__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodTxt__c</fullName>
    <label>Bairro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>