force-app/main/default/objects/Address__c/fields/NumberTxt__c.field-meta.xml
<CustomField>
    <fullName>NumberTxt__c</fullName>
    <label>Número</label>
    <length>25</length>
    <type>Text</type>
</CustomField>