force-app/main/default/objects/Address__c/fields/PartnerNameTxt__c.field-meta.xml
<CustomField>
    <fullName>PartnerNameTxt__c</fullName>
    <label>Razão Social/Nome do Parceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>