force-app/main/default/objects/Address__c/fields/PartnerStateInscriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>PartnerStateInscriptionTxt__c</fullName>
    <label>Inscrição Estadual Parceiro</label>
    <length>12</length>
    <type>Text</type>
</CustomField>