force-app/main/default/objects/Address__c/validationRules/PartnerStateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerStateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(LeadLkp__c)) &amp;&amp; TEXT( StateTxt__c ) &lt;&gt;  TEXT( LeadLkp__r.StateCode )</errorConditionFormula>
    <errorMessage>Não é possível cadastrar endereço de entrega para estado diferente do emissor</errorMessage>
</ValidationRule>